; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_ckh.c_ckh_try_bucket_insert.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_ckh.c_ckh_try_bucket_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i8*, i32* }

@LG_CKH_BUCKET_CELLS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i64, i8*, i8*)* @ckh_try_bucket_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ckh_try_bucket_insert(%struct.TYPE_5__* %0, i64 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 2
  %15 = load i32, i32* @LG_CKH_BUCKET_CELLS, align 4
  %16 = call i64 @prng_lg_range_u64(i32* %14, i32 %15)
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %18

18:                                               ; preds = %60, %4
  %19 = load i32, i32* %12, align 4
  %20 = call i32 @ZU(i32 1)
  %21 = load i32, i32* @LG_CKH_BUCKET_CELLS, align 4
  %22 = shl i32 %20, %21
  %23 = icmp ult i32 %19, %22
  br i1 %23, label %24, label %63

24:                                               ; preds = %18
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load i32, i32* @LG_CKH_BUCKET_CELLS, align 4
  %30 = zext i32 %29 to i64
  %31 = shl i64 %28, %30
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %11, align 4
  %34 = add i32 %32, %33
  %35 = call i32 @ZU(i32 1)
  %36 = load i32, i32* @LG_CKH_BUCKET_CELLS, align 4
  %37 = shl i32 %35, %36
  %38 = sub i32 %37, 1
  %39 = and i32 %34, %38
  %40 = zext i32 %39 to i64
  %41 = add i64 %31, %40
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i64 %41
  store %struct.TYPE_4__* %42, %struct.TYPE_4__** %10, align 8
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  %45 = load i32*, i32** %44, align 8
  %46 = icmp eq i32* %45, null
  br i1 %46, label %47, label %59

47:                                               ; preds = %24
  %48 = load i8*, i8** %8, align 8
  %49 = bitcast i8* %48 to i32*
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 1
  store i32* %49, i32** %51, align 8
  %52 = load i8*, i8** %9, align 8
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 0
  store i8* %52, i8** %54, align 8
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %56, align 8
  store i32 0, i32* %5, align 4
  br label %64

59:                                               ; preds = %24
  br label %60

60:                                               ; preds = %59
  %61 = load i32, i32* %12, align 4
  %62 = add i32 %61, 1
  store i32 %62, i32* %12, align 4
  br label %18

63:                                               ; preds = %18
  store i32 1, i32* %5, align 4
  br label %64

64:                                               ; preds = %63, %47
  %65 = load i32, i32* %5, align 4
  ret i32 %65
}

declare dso_local i64 @prng_lg_range_u64(i32*, i32) #1

declare dso_local i32 @ZU(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
